deploy/k8s/base/hanko/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hanko-tenant
  name: hanko
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    fqdn: hanko.quickstart.test
spec:
  tls:
    - hosts:
        - $(HANKO_FQDN)
      secretName: hanko-tls
  rules:
    - host: $(HANKO_FQDN)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hanko-public
                port:
                  name: http
